variables.Variables.scala.error
Erreur de compilation :
Variables:3: error: not found: value While
While (estSurBiscuit==false){
^