variables.Variables.scala.code
var nbPas=0
var dejaFait=0
While (estSurBiscuit==false){
  avance()
  nbPas=nbPas+1
}
porteBiscuit()
while(dejaFait<nbPas){
  recule()
}